# orbit-mcp

./: .clinerules  .gitignore  .mcp.json  CLAUDE.md  README.md  discord_message.md  pyproject.toml
.claude/commands/prp-commands/: prp-create.md
PRPs/: cline-native-pack-system.md
cline_docs/: productContext.md
ideas/: ENTERPRISE_OAUTH_PLAN.md  WORKOS_SUPABASE_ARCHITECTURE.md
packs/: oauth-demo.yaml
src/orbit_mcp/: __init__.py  __main__.py  main.py  mcp_server.py  pack_manager.py
