[project]
name = "orbit-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rasmus Widing", email = "rasmus.widing@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.11.0",
    "mcp>=1.12.3",
    "pyyaml>=6.0.2",
]

[project.scripts]
orbit-mcp = "orbit_mcp:main"
orbit-mcp-server = "orbit_mcp:mcp_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
